objects/T_D__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allow_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Reason__c</fullName>
        <label>Business Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>CE/Power Up Program</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>New Hire Curriculum</fullName>
                </value>
                <value>
                    <fullName>Online Classes</fullName>
                </value>
                <value>
                    <fullName>Onsite Training</fullName>
                </value>
                <value>
                    <fullName>Other Comments</fullName>
                </value>
                <value>
                    <fullName>Process/Product</fullName>
                </value>
                <value>
                    <fullName>Workshops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <label>Deliverables</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Draft_Due_date__c</fullName>
        <label>Draft Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Draft_completed_Date__c</fullName>
        <label>Draft completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Editor__c</fullName>
        <label>Editor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alexis Petrovich</fullName>
                </value>
                <value>
                    <fullName>Catelyn Thurman</fullName>
                </value>
                <value>
                    <fullName>Erin Garrison</fullName>
                </value>
                <value>
                    <fullName>Evelyn Rabil</fullName>
                </value>
                <value>
                    <fullName>Holly Simon</fullName>
                </value>
                <value>
                    <fullName>Joey Van Scoy</fullName>
                </value>
                <value>
                    <fullName>Kabir Rai</fullName>
                </value>
                <value>
                    <fullName>Meredith Duncan</fullName>
                </value>
                <value>
                    <fullName>Peter SIngh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_CSAT_Score__c</fullName>
        <label>Final CSAT Score</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <inlineHelpText>Desired end result of the project and why we're doing it in the first place.</inlineHelpText>
        <label>Goal</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_Of_Effort__c</fullName>
        <inlineHelpText>High:  21+ hours
Medium:  6-20 hours
Low:  5 hours or less</inlineHelpText>
        <label>Level Of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Articles_Modules__c</fullName>
        <label>Number of Articles/Modules</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <label>Other Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_SME__c</fullName>
        <label>Other SME</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Projects__c</fullName>
        <label>Related Projects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor_Evaluator__c</fullName>
        <label>Requestor/Evaluator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <label>Requestor Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <label>SME</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Holly Simon</fullName>
                </value>
                <value>
                    <fullName>Jason Davis</fullName>
                </value>
                <value>
                    <fullName>Jayme Sobeck</fullName>
                </value>
                <value>
                    <fullName>Jonathan Wilson</fullName>
                </value>
                <value>
                    <fullName>Mindy Harding</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Shelley Casey</fullName>
                </value>
                <value>
                    <fullName>Whitney Weeden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Spent_on_Project__c</fullName>
        <label>Time Spent on Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Training</fullName>
                </value>
                <value>
                    <fullName>Internal Training</fullName>
                </value>
                <value>
                    <fullName>Support Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_The_Delay__c</fullName>
        <label>Why The Delay</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Writer__c</fullName>
        <label>Writer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alexis Petrovich</fullName>
                </value>
                <value>
                    <fullName>Catelyn Thurman</fullName>
                </value>
                <value>
                    <fullName>Colleen Jaskot</fullName>
                </value>
                <value>
                    <fullName>Erin Garrison</fullName>
                </value>
                <value>
                    <fullName>Evelyn Rabil</fullName>
                </value>
                <value>
                    <fullName>Holly Simon</fullName>
                </value>
                <value>
                    <fullName>Joey Van Scoy</fullName>
                </value>
                <value>
                    <fullName>Kabir Rai</fullName>
                </value>
                <value>
                    <fullName>Meredith Duncan</fullName>
                </value>
                <value>
                    <fullName>Peter SIngh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>T&amp;D Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T&amp;D Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Completed_Projects</fullName>
        <columns>NAME</columns>
        <columns>Requested_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Product__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Carrie_s_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Actual_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>carrie</value>
        </filters>
        <label>Carrie's Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Catelyn_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>catelyn</value>
        </filters>
        <label>Catelyn's Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Erin_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>In Progress,Pending</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>erin</value>
        </filters>
        <label>Erin's Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Evelyn_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>In Progress,Pending</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>evelyn</value>
        </filters>
        <label>Evelyn's Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Meredith_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>In Progress,Pending,ongoing</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>meredith</value>
        </filters>
        <label>Meredith's Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>alexis_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>alexis</value>
        </filters>
        <label>Alexis's Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>holly_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>In Progress,Pending</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>holly</value>
        </filters>
        <label>Holly's Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>joey_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>In Progress,Pending,ongoing</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>joey</value>
        </filters>
        <label>Joey's Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>kabir_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>In Progress,Pending</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>kabir</value>
        </filters>
        <label>Kabir's Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>peter_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Product__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>In Progress,Pending</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>peter</value>
        </filters>
        <label>Peter's Open Projects</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Delay_field_Mandatory</fullName>
        <active>true</active>
        <description>if Actual Date is greater than due date</description>
        <errorConditionFormula>IF(Due_Date__c &lt; Actual_Completion_Date__c , ISBLANK( Why_The_Delay__c )=true,null)</errorConditionFormula>
        <errorDisplayField>Why_The_Delay__c</errorDisplayField>
        <errorMessage>Please Enter A Value</errorMessage>
    </validationRules>
</CustomObject>